# auth-ciudadania-digital

./: .dockerignore  .env.example  Cargo.toml  Dockerfile.Base  Dockerfile.Launch  readme.md
src/: main.rs
src/api/: authentication.rs  authorization.rs  get_info.rs  incio.rs  information.rs  introspection.rs  login.rs  logout.rs  mod.rs  redirect.rs  refresh_token.rs  verify.rs
src/api/resources/: credential.rs
src/model/: app_state.rs  mod.rs  param_authentication.rs  param_authorization.rs  param_introspection.rs  param_logout.rs  param_refresh.rs  param_verify.rs  post_data.rs  post_data_introspection.rs  post_data_refresh.rs  response_information.rs  response_introspection.rs  response_token.rs
src/resources/: credential.rs
