[package]
name = "auth-gadch"
version = "0.1.0"
edition = "2024"
authors = ["alanwalter45@gmail.com"]

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
actix-web = { version = "4.10.2" }
awc = { version = "3.7.0", features = ["rustls"] }
base64 = "0.22.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
utoipa = { version = "5.3.1" }
actix-cors = "0.7.1"
